#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[190] --> Update Utgarde Pinnacle: Skadi. (Thx lostgenx)
[189] --> Update Halls Of Reflection. (Thx lostgenx)
[188] --> Fix halion Outside the scope of the fire. (Thx siley)
[187] --> Implement Factions on Channel. (Thx MarWit)
[186] --> Implement Arena Spectator. (Thx Demonid)
[185] --> Implement Fake Players. (Thx LORDofDOOM)
[184] --> Fix Master's Call. (Thx digz6666)
[183] --> Implement - Anti-Rollback on Crash System for Items, Loot, and Quest. (Thx Demonid)
[182] --> Custom - Revive Pets on Arena + Remove some Debuffs. (Thx Demonid)
[181] --> Update Target Movement Generator. (Thx Quentis)
[180] --> Update PathPoint in Blade's Edge Arena, Dalaran Sewers and Eye of the Storm. (Thx Quentis)
[179] --> Fix SpellFamily for Redemption (Paladin) so it scales with haste rating. (Thx  mweinelt)
[178] --> Implement Battleground Crossfraction. (Thx Quentis)
[177] --> Implement Fast Arena Start. (Thx Demonid)
[176] --> Fix Sylvanas Music Box.
[175] --> Fix Shadowmeld. (Thx Hlkz)
[174] --> Fix - always apply paladin auras' linked spells for caster. (Thx Timothy Liang)
[173] --> Fix - Bladestorm - Knockback Effect. (Thx Demonid)
[172] --> Fix - Warrior - Multi Reflect + Scatter Shot - Silencing Shot Travel time delay. (Thx Demonid)
[171] --> Fix - Water Elemental + Despawn. (Thx Demonid)
[170] --> Fix - Misdirection. (Thx Demonid)
[169] --> Fix Ebon Gargoyle - Target + Follow. (By Moco23)
[168] --> Fix Bonus 4P T10 Warrior. (TEST By Ranou)
[167] --> Revert 'Implement Raise ally. (TEST By Runico)'.
[166] --> Fix - Vehicle Immunities. (By Demonid)