@@ -272,6 +272,10 @@ Unit::Unit(bool isWorldObject): WorldObject(isWorldObject)
     _focusSpell = NULL;
     _lastLiquid = NULL;
     _isWalkingBeforeCharm = false;
+
+    _damageInfo.target = NULL;
+    _delayedDamageTargetGuid = 0;
+    _swingDelayTimer = 0;
 }
 
 ////////////////////////////////////////////////////////////
@@ -366,6 +370,25 @@ void Unit::Update(uint32 p_time)
                 ClearInCombat();
             else
                 m_CombatTimer -= p_time;
+        }
+    }
+
+    if (_damageInfo.target != NULL)
+    {
+        if (_delayedDamageTargetGuid == 0)
+            _damageInfo.target = NULL;
+        else if (_swingDelayTimer >= p_time)
+            _swingDelayTimer -= p_time;
+        else
+        {
+            _damageInfo.target = sObjectAccessor->FindUnit(_delayedDamageTargetGuid);
+            if (_damageInfo.target)
+                ExecuteDelayedSwingHit();
+            else
+            {
+                sLog->outDebug(LOG_FILTER_UNITS, "%s (%s, %u) has lost delayed target %u", GetName().c_str(), ToPlayer() ? "player" : "creature", GetGUIDLow(), GUID_LOPART(_delayedDamageTargetGuid));
+                _delayedDamageTargetGuid = 0;
+            }
         }
     }
 
@@ -1995,6 +2018,40 @@ void Unit::CalcHealAbsorb(Unit* victim, const SpellInfo* healSpell, uint32 &heal
     healAmount = RemainingHeal;
 }
 
+bool Unit::HasDelayedSwing() const
+{
+    return _delayedDamageTargetGuid != 0;
+}
+
+CalcDamageInfo Unit::GetDelayedDamageInfo() const
+{
+    return _damageInfo;
+}
+
+void Unit::ExecuteDelayedSwingHit()
+{
+    ASSERT(_damageInfo.target);
+
+    _swingDelayTimer = 0;
+    _delayedDamageTargetGuid = 0;
+
+    sLog->outDebug(LOG_FILTER_UNITS, "Unit::ExecuteDelayedSwingHit() call for %s, victim = %s", GetName().c_str(), _damageInfo.target->GetName().c_str());
+
+    //TriggerAurasProcOnEvent(*_damageInfo);
+
+    DealMeleeDamage(&_damageInfo, true);
+
+    // Recursion warning here
+    ProcDamageAndSpell(_damageInfo.target, _damageInfo.procAttacker, _damageInfo.procVictim, _damageInfo.procEx, _damageInfo.damage, _damageInfo.attackType);
+}
+
+void Unit::SuspendDelayedSwing()
+{
+    sLog->outDebug(LOG_FILTER_UNITS, "Unit::SuspendDelayedSwing() call for %s, victim = %s", GetName().c_str(), _damageInfo.target ? _damageInfo.target->GetName().c_str() : "_removed_");
+
+    _delayedDamageTargetGuid = 0;
+}
+
 void Unit::AttackerStateUpdate (Unit* victim, WeaponAttackType attType, bool extra)
 {
     if (HasUnitState(UNIT_STATE_CANNOT_AUTOATTACK) || HasFlag(UNIT_FIELD_FLAGS, UNIT_FLAG_PACIFIED))
@@ -2012,6 +2069,11 @@ void Unit::AttackerStateUpdate (Unit* victim, WeaponAttackType attType, bool ext
     if (attType != BASE_ATTACK && attType != OFF_ATTACK)
         return;                                             // ignore ranged case
 
+    // If attack is executed before previous swing finished, finish it forcefully
+    // This doesn't include extra attacks
+    if (_damageInfo.target != NULL && _delayedDamageTargetGuid != 0)
+        ExecuteDelayedSwingHit();
+
     // melee attack spell casted at main hand attack only - no normal melee dmg dealt
     if (attType == BASE_ATTACK && m_currentSpells[CURRENT_MELEE_SPELL] && !extra)
         m_currentSpells[CURRENT_MELEE_SPELL]->cast();
@@ -2020,23 +2082,28 @@ void Unit::AttackerStateUpdate (Unit* victim, WeaponAttackType attType, bool ext
         // attack can be redirected to another target
         victim = GetMeleeHitRedirectTarget(victim);
 
-        CalcDamageInfo damageInfo;
-        CalculateMeleeDamage(victim, 0, &damageInfo, attType);
+        CalculateMeleeDamage(victim, 0, &_damageInfo, attType);
+        DealDamageMods(victim, _damageInfo.damage, &_damageInfo.absorb);
+
         // Send log damage message to client
-        DealDamageMods(victim, damageInfo.damage, &damageInfo.absorb);
-        SendAttackStateUpdate(&damageInfo);
+        SendAttackStateUpdate(&_damageInfo);
 
-        //TriggerAurasProcOnEvent(damageInfo);
-        ProcDamageAndSpell(damageInfo.target, damageInfo.procAttacker, damageInfo.procVictim, damageInfo.procEx, damageInfo.damage, damageInfo.attackType);
-
-        DealMeleeDamage(&damageInfo, true);
+        // If this attack is procced from another white damage (extra attack) execute it right now
+        // Else delay melee hit by average melee swing animation time (currently only players)
+        if (m_extraAttacks)
+            ExecuteDelayedSwingHit();
+        else
+        {
+            _swingDelayTimer = 500; // average value, need exact
+            _delayedDamageTargetGuid = victim->GetGUID();
+        }
 
         if (GetTypeId() == TYPEID_PLAYER)
             sLog->outDebug(LOG_FILTER_UNITS, "AttackerStateUpdate: (Player) %u attacked %u (TypeId: %u) for %u dmg, absorbed %u, blocked %u, resisted %u.",
-                GetGUIDLow(), victim->GetGUIDLow(), victim->GetTypeId(), damageInfo.damage, damageInfo.absorb, damageInfo.blocked_amount, damageInfo.resist);
+                GetGUIDLow(), victim->GetGUIDLow(), victim->GetTypeId(), _damageInfo.damage, _damageInfo.absorb, _damageInfo.blocked_amount, _damageInfo.resist);
         else
-            sLog->outDebug(LOG_FILTER_UNITS, "AttackerStateUpdate: (NPC)    %u attacked %u (TypeId: %u) for %u dmg, absorbed %u, blocked %u, resisted %u.",
-                GetGUIDLow(), victim->GetGUIDLow(), victim->GetTypeId(), damageInfo.damage, damageInfo.absorb, damageInfo.blocked_amount, damageInfo.resist);
+            sLog->outDebug(LOG_FILTER_UNITS, "AttackerStateUpdate: (NPC) %u attacked %u (TypeId: %u) for %u dmg, absorbed %u, blocked %u, resisted %u.",
+                GetGUIDLow(), victim->GetGUIDLow(), victim->GetTypeId(), _damageInfo.damage, _damageInfo.absorb, _damageInfo.blocked_amount, _damageInfo.resist);
     }
 }
 
@@ -9195,24 +9262,24 @@ bool Unit::AttackStop()
     return true;
 }
 
-void Unit::CombatStop(bool includingCast)
+void Unit::CombatStop(bool includingCast, bool includingAttacks)
 {
     if (includingCast && IsNonMeleeSpellCasted(false))
         InterruptNonMeleeSpells(false);
 
     AttackStop();
-    RemoveAllAttackers();
+    RemoveAllAttackers(includingAttacks);
     if (GetTypeId() == TYPEID_PLAYER)
         ToPlayer()->SendAttackSwingCancelAttack();     // melee and ranged forced attack cancel
     ClearInCombat();
 }
 
-void Unit::CombatStopWithPets(bool includingCast)
+void Unit::CombatStopWithPets(bool includingCast, bool includingAttacks)
 {
-    CombatStop(includingCast);
+    CombatStop(includingCast, includingAttacks);
 
     for (ControlList::const_iterator itr = m_Controlled.begin(); itr != m_Controlled.end(); ++itr)
-        (*itr)->CombatStop(includingCast);
+        (*itr)->CombatStop(includingCast, includingAttacks);
 }
 
 bool Unit::isAttackingPlayer() const
@@ -9233,11 +9300,13 @@ bool Unit::isAttackingPlayer() const
     return false;
 }
 
-void Unit::RemoveAllAttackers()
+void Unit::RemoveAllAttackers(bool stopAttacks)
 {
     while (!m_attackers.empty())
     {
         AttackerSet::iterator iter = m_attackers.begin();
+        if (stopAttacks)
+            (*iter)->SuspendDelayedSwing();
         if (!(*iter)->AttackStop())
         {
             sLog->outError(LOG_FILTER_UNITS, "WORLD: Unit has an attacker that isn't attacking it!");
@@ -13683,12 +13752,12 @@ void Unit::CleanupBeforeRemoveFromMap(bool finalCleanup)
     if (finalCleanup)
         m_cleanupDone = true;
 
-    m_Events.KillAllEvents(false);                      // non-delatable (currently casted spells) will not deleted now but it will deleted at call in Map::RemoveAllObjectsInRemoveList
-    CombatStop();
+    m_Events.KillAllEvents(false); // non-delatable (currently casted spells) will not deleted now but it will deleted at call in Map::RemoveAllObjectsInRemoveList
+    CombatStop(false, true);
     ClearComboPointHolders();
     DeleteThreatList();
     getHostileRefManager().setOnlineOfflineState(false);
-    GetMotionMaster()->Clear(false);                    // remove different non-standard movement generators.
+    GetMotionMaster()->Clear(false); // remove different non-standard movement generators.
 }
 
 void Unit::CleanupsBeforeDelete(bool finalCleanup)
@@ -15520,8 +15589,8 @@ void Unit::Kill(Unit* victim, bool durabilityLoss)
         // last damage from non duel opponent or opponent controlled creature
         if (plrVictim->duel)
         {
-            plrVictim->duel->opponent->CombatStopWithPets(true);
-            plrVictim->CombatStopWithPets(true);
+            plrVictim->duel->opponent->CombatStopWithPets(true, true);
+            plrVictim->CombatStopWithPets(true, true);
             plrVictim->DuelComplete(DUEL_INTERRUPTED);
         }
     }
