@@ -1307,13 +1307,13 @@ class Unit : public WorldObject
         bool Attack(Unit* victim, bool meleeAttack);
         void CastStop(uint32 except_spellid = 0);
         bool AttackStop();
-        void RemoveAllAttackers();
+        void RemoveAllAttackers(bool stopAttacks = false);
         AttackerSet const& getAttackers() const { return m_attackers; }
         bool isAttackingPlayer() const;
         Unit* getVictim() const { return m_attacking; }
 
-        void CombatStop(bool includingCast = false);
-        void CombatStopWithPets(bool includingCast = false);
+        void CombatStop(bool includingCast = false, bool includingAttacks = false);
+        void CombatStopWithPets(bool includingCast = false, bool includingAttacks = false);
         void StopAttackFaction(uint32 faction_id);
         Unit* SelectNearbyTarget(Unit* exclude = NULL, float dist = NOMINAL_MELEE_RANGE) const;
         void SendMeleeAttackStop(Unit* victim = NULL);
@@ -2145,6 +2145,11 @@ class Unit : public WorldObject
         time_t GetLastDamagedTime() const { return _lastDamagedTime; }
         void SetLastDamagedTime(time_t val) { _lastDamagedTime = val; }
 
+        CalcDamageInfo GetDelayedDamageInfo() const;
+        bool HasDelayedSwing() const;
+        void SuspendDelayedSwing();
+        void ExecuteDelayedSwingHit();
+
     protected:
         explicit Unit (bool isWorldObject);
 
@@ -2255,6 +2260,10 @@ class Unit : public WorldObject
         ComboPointHolderSet m_ComboPointHolders;
 
         RedirectThreatInfo _redirectThreadInfo;
+
+        CalcDamageInfo _damageInfo;
+        uint64 _delayedDamageTargetGuid;
+        uint32 _swingDelayTimer;
 
         bool m_cleanupDone; // lock made to not add stuff after cleanup before delete
         bool m_duringRemoveFromWorld; // lock made to not add stuff after begining removing from world
