@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[191] --> Implement melee damage delay. (Thx trickerer)
 [190] --> Update Utgarde Pinnacle: Skadi. (Thx lostgenx)
 [189] --> Update Halls Of Reflection. (Thx lostgenx)
 [188] --> Fix halion Outside the scope of the fire. (Thx siley)
